# pdf2

./: README.md  pyproject.toml
src/pdf2/: __init__.py  __main__.py
