[project]
name = "pdf2"
version = "0.1.0"
description = "Command line tool to convert pdf files to various output files."
authors = [{name = "M.J.W. Snippe"}]
license = "MIT"
readme = "README.md"

[project.scripts]
pdf2 = "pdf2.__main__:main"

[tool.poetry]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.2"

[tool.poetry.group.style]
optional = true

[tool.poetry.group.style.dependencies]
ruff = "^0.11.0"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
mypy = "^1.15.0"

[tool.ruff]
line-length = 119

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
